Added figure captions

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                   <div id = YoutubePlayer>
     
                    <iframe width="900" height="315" src="https://www.youtube.com/embed/0pThnRneDjw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <figcaption>Contributing to Open Source Part 1: The Easy Way</figcaption>
+
+
+
                   </div>
 
                   <div id = "Comments"></div>
